--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
