--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-kakao-maps-sdk": "^1.1.27",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "react-signature-canvas": "^1.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
