--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "swiper": "^11.1.4",
-    "react-kakao-maps-sdk": "^1.1.27"
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-signature-canvas": "^1.0.6"
   },
   "devDependencies": {
