--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router-dom": "^6.24.0",
+    "react-signature-canvas": "^1.0.6",
     "react-time-picker": "^7.0.0",
     "react-time-picker-typescript": "^1.2.3",
-    "swiper": "^11.1.4",
-    "react-signature-canvas": "^1.0.6"
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-calendar": "^4.1.0",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
